changed how mouse over/click are handled on the stats due to rendering issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
 .instructions {
     position: absolute;
     background: rgba(255, 255, 255, 0.8);
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
     font-size: 0.75em;
     left: 5%;
     top: 40%;
@@ -88,7 +88,7 @@ body {
     height: auto;
     border: 1px solid black;
     border-radius: 5%;
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
 }
 
 .card-stats {
@@ -113,14 +113,14 @@ body {
     transition: background-color 0.3s, color 0.3s; 
 }
 
-.stat-item:hover {
+.stat-item-hover {
     background-color: rgba(0, 123, 255, 0.8);
-    color: white; 
+    color: white;
 }
 
-.stat-item:active {
+.stat-item-active {
     background-color: rgba(0, 86, 179, 0.8);
-    color: white; 
+    color: white;
 }
 
 .stat-name, .stat-value {
@@ -134,7 +134,7 @@ body {
 
 #deck-size-area {
     background: rgba(255, 255, 255, 0.8);
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
     width: 100%;
     border: 2px solid #000;
     border-radius: 10px;
@@ -156,7 +156,7 @@ body {
 #message-area {
     position: absolute;
     background: rgba(255, 255, 255, 0.8);
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
     top: 110%;
     left: 10%;
     width: 80%;
